# dotfiles

./: .Xresources  .clang-format  .gitconfig  .ideavimrc  .tmux.conf  .vimrc  .zshrc  init.vim  packages.txt  readme.md
.conan2/: notes.md
.conan2/profiles/: debug  default
.config/alacritty/: alacritty.toml  alacritty.yml  alacritty.yml.backup  vscode.toml
.config/alacritty/github_monochrome/: github_monochrome_dark.toml  github_monochrome_light.toml  github_monochrome_rosepine-dawn.toml  github_monochrome_rosepine.toml  github_monochrome_solarized.toml  github_monochrome_tokyonight.toml  github_monochrome_zenbones.toml
.config/alacritty/themes/: alabaster_dark.toml
.config/bspwm/: bspwmrc
.config/dunst/: dunstrc
.config/fish/: config.fish  fish_variables
.config/fish/functions/: fish_prompt.fish
.config/i3/: config
.config/kitty/: kitty.conf  kitty.conf.bak
.config/nvim/: coc-settings.json  init.lua  init.vim  plug.vim  plugin-shortcuts.vim  plugins.vim
.config/picom/: picom.conf
.config/polybar/: colors.ini  config  config-1  config.ini  launch.sh  modules.ini
.config/rofi/: colors.rasi  config.rasi  iconic.rasi  readme.md  simple.rasi
.config/sway/: config
.config/sxhkd/: sxhkdrc
.config/termite/: config  config.backup  config.backup2
.config/waybar/: config  modules  style.css
.tmux/: adwita.tmux.conf  gruvbox.tmux.conf
default_cpp_proj_files/: .gitignore  CMakeLists.txt  Makefile
default_cpp_proj_files/src/: CMakeLists.txt
default_cpp_proj_files/tests/: CMakeLists.txt
i3/: config
polybar/: bars.ini  config  config.ini  empty.ini  i3wmthemer_bar_launch.sh  modules.ini
polybar/scripts/: powermenu
termite/: config
(+42 files in other folders)
